<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageMatcher</string>
    <string name="action_settings">Settings</string>
    <string name="button_name">Take_Picture</string>
    <string name="button_name2">Find_Match</string>
    <string name="Radio_button2">Exact</string>
    <string name="Radio_button1">Similar</string>
    <string name="Title">ImageMatcher</string>
    <string name="resLabel">BestMatches:</string>

</resources>
